[package]
name = "aior-server"
version = "0.1.0"
authors = ["Cem Catikkas <cem.catikkas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json5 = "0.2.5"
serde = { version = "1.0.103", features = ["derive"] }
serde_repr = "0.1.5"
ascii = "1.0.0"
enigo = "0.0.13"
tokio = "0.2"
